--- a/css/styles.css
+++ b/css/styles.css
@@ -438,17 +438,26 @@ body {
 /* portfolio */
 
 .portfolio-list {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  --n: 3;
+  grid-template-columns: repeat(var(--n), 1fr);
+  grid-template-rows: auto auto;
+  gap: 30px;
 }
 
-.portfolio-list .item {
+@media screen and (max-width: 1199px) {
+  .portfolio-list {
+    --n: 2;
+  }
+}
+
+/* .portfolio-list .item {
   width: calc((100% - 30 * 2) / 3);
   margin-right: 30px;
   margin-bottom: 30px;
-}
+} */
 
-.item .card {
+/* .item .card {
   box-sizing: content-box;
   border: 1px solid var(--card-border-color);
 
@@ -491,4 +500,4 @@ body {
 
 .portfolio-link {
   text-decoration: none;
-}
+}  */
